syntax="proto3";

import "scalapb/scalapb.proto";

option java_package = "java_protos";
option (scalapb.options).package_name = "protos";

message Message {
    int32 number = 1;
    int64 long_number = 2;
    double dbl = 3;
    string str = 4;
    bool flag = 5;

    enum State {
        UNKNOWN = 0;
        OK = 1;
        ERROR = 2;
    }
    State state = 6;

    message Nested {
        message Inner {
            string payload = 1;
        }
        Inner inner = 1;
    }
    Nested nested = 7;

    repeated string repeated_string = 8;
    repeated Nested repeated_nested = 9;

    map<int32, string> messages = 10;
    map<int32, Nested> nested_map = 11;

    oneof choice {
        string either_1 = 12;
        string either_2 = 13;
        int32 either_3 = 14;
        Nested either_4 = 15;
    }

    bytes data = 100;

    optional int32 optint = 16;
}

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/field_mask.proto";

message SpecialFormats {
    google.protobuf.Timestamp ts = 1;
    google.protobuf.Duration duration = 2;
    google.protobuf.Int32Value wrapper = 3;
    google.protobuf.FieldMask fm = 4;
}
